fix: wrong gapcursor visibility

--- a/projects/editor/components/editor-socket/editor-socket.component.less
+++ b/projects/editor/components/editor-socket/editor-socket.component.less
@@ -27,7 +27,9 @@
     }
 
     .ProseMirror-gapcursor {
+        position: relative;
         margin-block-start: 0.83rem;
+        block-size: 1px;
     }
 
     .ProseMirror .ProseMirror-gapcursor:first-child {
